--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html,head {
+    background-image: linear-gradient(to right top, #052d68, #4b276d, #791664, #9b004e, #ae092e);
+    background-repeat: no-repeat;
+    height: 100%;
+}
+
 label, select, input{
     width: 150px;
     display: inline-block;
@@ -9,6 +15,76 @@ label, select, input{
 }
 
 td {
-    border:  2px solid black;
+    border:  1px solid white;
     padding: 30px;
+    border-radius: 5px;
+}
+
+.container2 {
+
+    text-align: center;
+    margin-top: 10%;
+    border: 2px solid # EF5350;
+
+}
+
+h2 {
+
+    font-size: 30px;
+
+}
+
+.input {
+
+    width: 300px;
+    height: 30px;
+    border-radius: 5px;
+
+}
+
+button {
+
+    margin-top: 10px;
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+
+}
+
+.separator {
+    height: 3px;
+    width: 30%;
+    border: none;
+    box-shadow: none;
+    background-color: white;
+}
+
+.separator2 {
+    height: 3px;
+    width: 30%;
+    border: none;
+    box-shadow: none;
+    background-color: #fefdff;
+    margin-top: 25px;
+}
+
+button:hover {
+
+    color: #4634ff;
+    background-color: azure;
+
+}
+
+.button {
+    display: inline-block;
+    text-decoration: none;
+    border: 2px solid #C62828;
+    color: #fefdff;
+    border-radius: 5px;
+    padding: 8px;
+}
+
+a,label,h1 {
+    text-decoration: none;
+    color: white;
 }
